RESOLVED FIXED246322
encode WebCore::Paths using a trailing "end of path" marker instead of an element count prefix
https://bugs.webkit.org/show_bug.cgi?id=246322
Summary encode WebCore::Paths using a trailing "end of path" marker instead of an ele...
Cameron McCormack (:heycam)
Reported 2022-10-10 22:46:30 PDT
The decoder doesn't need to know the number of elements ahead of time, and writing a uint8_t marker at the end instead of a uint64_t at the start can save some bytes.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-10 22:47:08 PDT
Cameron McCormack (:heycam)
Comment 2 2022-10-11 15:57:28 PDT
Cameron McCormack (:heycam)
Comment 3 2022-10-11 16:01:03 PDT
EWS
Comment 4 2022-10-12 13:46:17 PDT
Committed 255452@main (09496e855222): <https://commits.webkit.org/255452@main> Reviewed commits have been landed. Closing PR #5264 and removing active labels.
EWS
Comment 5 2022-10-21 08:57:24 PDT
Committed 252432.632@safari-7614-branch (81b6f2dd592c): <https://commits.webkit.org/252432.632@safari-7614-branch> Reviewed commits have been landed. Closing PR #154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.